--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ button{
   <div class="content">
 
     <div class="card">
-      <h2>① 選擇服務</h2>
+      <h2>① 模組套用</h2>
       <div class="demo-grid" id="demoGrid"></div>
     </div>
 
