--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ button{
   <div class="content">
 
     <div class="card">
-      <h2>① 模組套用</h2>
+      <h2>① 選擇套用模板</h2>
       <div class="demo-grid" id="demoGrid"></div>
     </div>
 
@@ -94,8 +94,8 @@ button{
 
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <script>
-const LIFF_ID = "2008866230-0043vGnl";
-const API_URL = "https://script.google.com/macros/s/你的_EXEC_URL/exec";
+const LIFF_ID = "2008866230-o043vGnI";
+const API_URL = "https://script.google.com/macros/s/AKfycbzXIV_n3MEPgLhWWP-tFUPaMGX6T6Cxa5vxz6aUSP37I_sX2uyYywoTz2-P-ycMVVD_/exec";
 
 const DEMOS = [
   { id:"Demo A", name:"Demo A", img:"https://picsum.photos/600/400?1" },
