--- a/index.html
+++ b/index.html
@@ -7,345 +7,293 @@
 
   <style>
     :root{
-      --ui: 1.00;
-      --radius: calc(18px * var(--ui));
-      --gap: calc(10px * var(--ui));
-
-      --h1: clamp(18px, 2.4vh, 22px);
-      --h2: clamp(16px, 2.1vh, 20px);
-      --p:  clamp(13px, 1.8vh, 16px);
-      --label: clamp(13px, 1.8vh, 16px);
-      --input: clamp(14px, 2.0vh, 17px);
-
-      --btnH: clamp(52px, 7vh, 64px);
-      --btnFont: clamp(16px, 2.1vh, 18px);
+      --ui:1;
+      --gap:12px;
+      --radius:16px;
     }
 
-    html, body {
-      margin: 0;
-      height: 100%;
-      background: #f6f7fb;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", Arial;
+    html,body{
+      margin:0;
+      height:100%;
+      background:#f6f7fb;
+      font-family:system-ui,-apple-system,"Segoe UI","Noto Sans TC",Arial;
     }
 
     .app{
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
+      height:100%;
+      display:flex;
+      flex-direction:column;
     }
 
     .content{
-      flex: 1;
-      padding: calc(12px * var(--ui));
-      box-sizing: border-box;
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
+      flex:1;
+      overflow:auto;
+      padding:12px;
+      box-sizing:border-box;
     }
 
     .card{
-      background: #fff;
-      border-radius: var(--radius);
-      padding: calc(14px * var(--ui));
-      box-shadow: 0 6px 18px rgba(0,0,0,.06);
-      margin-bottom: var(--gap);
+      background:#fff;
+      border-radius:16px;
+      padding:14px;
+      margin-bottom:12px;
+      box-shadow:0 6px 18px rgba(0,0,0,.05);
     }
 
     h1{
-      font-size: var(--h1);
-      margin: 0 0 8px 0;
-      font-weight: 900;
+      margin:0 0 6px;
+      font-size:18px;
+      font-weight:900;
     }
 
     .muted{
-      font-size: var(--p);
-      color: #667085;
-      line-height: 1.35;
+      font-size:13px;
+      color:#667085;
     }
 
     .sectionTitle{
-      font-size: var(--h2);
-      margin: 0 0 10px 0;
-      font-weight: 900;
-      display: flex;
-      align-items: center;
-      gap: 10px;
+      font-size:16px;
+      font-weight:900;
+      margin-bottom:10px;
     }
 
+    /* Demo */
     .demo-grid{
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: var(--gap);
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:12px;
     }
 
     .demo{
-      border: 2px solid #e2e6ef;
-      border-radius: calc(16px * var(--ui));
-      overflow: hidden;
-      cursor: pointer;
-      background: #fff;
-      user-select: none;
-    }
-
-    .demo img{
-      width: 100%;
-      height: clamp(92px, 14vh, 120px);
-      object-fit: cover;
-      display: block;
-      background: #eee;
-    }
-
-    .demo .txt{
-      padding: calc(8px * var(--ui));
-      text-align: center;
-      font-weight: 900;
-      font-size: clamp(14px, 2.0vh, 17px);
+      border:2px solid #e5e7eb;
+      border-radius:16px;
+      overflow:hidden;
+      cursor:pointer;
     }
 
     .demo.active{
-      border-color: #06c755;
-      box-shadow: 0 0 0 3px rgba(6,199,85,.2);
+      border-color:#06c755;
+      box-shadow:0 0 0 3px rgba(6,199,85,.25);
     }
 
+    .demo img{
+      width:100%;
+      height:110px;
+      object-fit:cover;
+      display:block;
+    }
+
+    .demo .txt{
+      text-align:center;
+      font-weight:900;
+      padding:8px;
+    }
+
+    /* Form */
     label{
       display:block;
-      margin: calc(10px * var(--ui)) 0 calc(6px * var(--ui));
-      font-size: var(--label);
-      font-weight: 800;
+      font-size:13px;
+      font-weight:800;
+      margin:10px 0 6px;
     }
 
-    input, select, textarea{
-      width: 100%;
-      padding: calc(12px * var(--ui));
-      border-radius: calc(14px * var(--ui));
-      border: 1px solid #e2e6ef;
-      font-size: var(--input);
-      box-sizing: border-box;
-      outline: none;
-      background: #fff;
+    input,select,textarea{
+      width:100%;
+      padding:12px;
+      border-radius:14px;
+      border:1px solid #e2e6ef;
+      box-sizing:border-box;
+      font-size:14px;
     }
 
     .row{
-      display: grid;
-      grid-template-columns: 1fr clamp(110px, 26vw, 140px);
-      gap: var(--gap);
+      display:grid;
+      grid-template-columns:1fr 120px;
+      gap:10px;
     }
 
     textarea{
-      height: clamp(70px, 12vh, 110px);
-      resize: none;
+      resize:none;
+      height:90px;
     }
 
+    /* Footer */
     .footer{
-      position: sticky;
-      bottom: 0;
-      background: #f6f7fb;
-      padding: calc(10px * var(--ui)) calc(12px * var(--ui)) calc(10px + env(safe-area-inset-bottom));
-      box-sizing: border-box;
-      border-top: 1px solid #eef0f6;
+      position:sticky;
+      bottom:0;
+      background:#f6f7fb;
+      padding:10px 12px calc(10px + env(safe-area-inset-bottom));
+      border-top:1px solid #eef0f6;
     }
 
     .btn{
-      width: 100%;
-      height: var(--btnH);
-      border: 0;
-      border-radius: calc(16px * var(--ui));
-      background: #06c755;
-      color: #fff;
-      font-size: var(--btnFont);
-      font-weight: 900;
-      cursor: pointer;
+      width:100%;
+      height:56px;
+      border:none;
+      border-radius:16px;
+      background:#06c755;
+      color:#fff;
+      font-size:18px;
+      font-weight:900;
+      cursor:pointer;
     }
-    .btn:disabled{ opacity: .7; cursor: not-allowed; }
 
     .msg{
-      text-align: center;
-      margin-top: 8px;
-      font-size: clamp(12px, 1.6vh, 14px);
-      color: #667085;
-      min-height: 20px;
-      font-weight: 800;
+      margin-top:8px;
+      text-align:center;
+      font-size:14px;
+      color:#667085;
     }
-    .msg.ok{ color:#067647; }
-    .msg.err{ color:#b42318; }
+
+    .msg.ok{ color:#067647; font-weight:900; }
+    .msg.err{ color:#b42318; font-weight:900; }
   </style>
 </head>
 
 <body>
-  <div class="app">
-    <div class="content">
-      <div class="card">
-        <h1>預約表單</h1>
-        <div class="muted">於 LINE 內完成，不會跳外部瀏覽器</div>
-      </div>
+<div class="app">
 
-      <div class="card">
-        <div class="sectionTitle">① 選擇套用模板</div>
-        <div class="demo-grid" id="demoGrid"></div>
-      </div>
+  <div class="content">
 
-      <div class="card">
-        <div class="sectionTitle">② 客戶資料</div>
-
-        <label>姓氏</label>
-        <div class="row">
-          <input id="lastName" placeholder="例如：王" />
-          <select id="title">
-            <option value="">稱謂</option>
-            <option value="先生">先生</option>
-            <option value="小姐">小姐</option>
-          </select>
-        </div>
-
-        <label>聯絡電話（10位數）</label>
-        <input id="phone" placeholder="0912345678" inputmode="tel" />
-
-        <label>備註（可選）</label>
-        <textarea id="note" placeholder="方便聯絡時間 / 需求說明..."></textarea>
-      </div>
+    <div class="card">
+      <h1>LINE 預約</h1>
+      <div class="muted">於 LINE 內完成，不會跳出瀏覽器</div>
     </div>
 
-    <div class="footer">
-      <button class="btn" id="submitBtn">我要預約</button>
-      <div class="msg" id="msg"></div>
+    <div class="card">
+      <div class="sectionTitle">① 選擇模板</div>
+      <div class="demo-grid" id="demoGrid"></div>
     </div>
+
+    <div class="card">
+      <div class="sectionTitle">② 客戶資料</div>
+
+      <label>姓氏</label>
+      <div class="row">
+        <input id="lastName" placeholder="例如：王">
+        <select id="title">
+          <option value="">稱謂</option>
+          <option value="先生">先生</option>
+          <option value="小姐">小姐</option>
+        </select>
+      </div>
+
+      <label>聯絡電話</label>
+      <input id="phone" placeholder="0912345678" inputmode="tel">
+
+      <label>備註（可選）</label>
+      <textarea id="note" placeholder="方便聯絡時間 / 需求說明"></textarea>
+    </div>
+
   </div>
 
-  <!-- LIFF SDK -->
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <div class="footer">
+    <button class="btn" id="submitBtn">我要預約</button>
+    <div class="msg" id="msg"></div>
+  </div>
 
-  <script>
-    // =========================
-    // 1) 你的設定（只改這兩個）
-    // =========================
-    const LIFF_ID = "2008866230-o043vGnI";
+</div>
 
-    // ✅ 這裡一定貼「Apps Script 部署出來的 /exec」
-    const API_URL = "https://script.google.com/macros/s/AKfycbzXIV_n3MEPgLhWWP-tFUPaMGX6T6Cxa5vxz6aUSP37I_sX2uyYywoTz2-P-ycMVVD_/exec";
+<!-- LIFF SDK -->
+<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
-    // =========================
-    // 2) Demo 資料
-    // =========================
-    const DEMOS = [
-      { id: "Demo A", name: "Demo A", img: "https://picsum.photos/600/400?1" },
-      { id: "Demo B", name: "Demo B", img: "https://picsum.photos/600/400?2" }
-    ];
+<script>
+  /* ========= 設定區（只動這裡） ========= */
+  const LIFF_ID = "2008866230-o043vGnI";
+  const API_URL = "https://script.google.com/macros/s/AKfycbXIV_n3MEPghWWP-tFUPaMGX6T6Cxa5vxz6aUSP37I_sX2uyYw0Tz2-P-ycMVD_/exec";
 
-    let selectedDemo = "";
+  /* ========= Demo ========= */
+  const DEMOS = [
+    { id:"Demo A", name:"Demo A", img:"https://picsum.photos/600/400?1" },
+    { id:"Demo B", name:"Demo B", img:"https://picsum.photos/600/400?2" }
+  ];
 
-    function setMsg(text, type="") {
-      const el = document.getElementById("msg");
-      el.className = "msg " + (type || "");
-      el.textContent = text || "";
-    }
+  let selectedDemo = "";
 
-    function renderDemos(){
-      const grid = document.getElementById("demoGrid");
-      grid.innerHTML = "";
-      DEMOS.forEach((d, i) => {
-        const el = document.createElement("div");
-        el.className = "demo";
-        el.innerHTML = `<img src="${d.img}" alt=""><div class="txt">${d.name}</div>`;
-        el.onclick = () => {
-          selectedDemo = d.id;
-          [...grid.children].forEach(x => x.classList.remove("active"));
-          el.classList.add("active");
-        };
-        grid.appendChild(el);
-        if (i === 0) el.click();
-      });
-    }
+  function setMsg(t,type=""){
+    const m=document.getElementById("msg");
+    m.className="msg "+type;
+    m.textContent=t||"";
+  }
 
-    function validateForm(){
-      const lastName = document.getElementById("lastName").value.trim();
-      const title = document.getElementById("title").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-
-      const missing = [];
-      if (!lastName) missing.push("姓氏");
-      if (!title) missing.push("稱謂");
-      if (!phone) missing.push("電話");
-      else if (!/^\d{10}$/.test(phone)) missing.push("電話需10位數");
-
-      return { ok: missing.length === 0, missing, lastName, title, phone };
-    }
-
-    async function initLIFF(){
-      try {
-        await liff.init({ liffId: LIFF_ID });
-        // 沒事就不要吵
-        setMsg("");
-      } catch (e) {
-        // 不是在 LINE 內開也可能會失敗，不要一直紅字嚇人
-        setMsg("（提示）非 LINE 內開啟，LIFF 不會登入也沒關係", "");
-      }
-    }
-
-    async function submit(){
-      const btn = document.getElementById("submitBtn");
-      btn.disabled = true;
-
-      const v = validateForm();
-      if (!v.ok) {
-        setMsg("請補齊：" + v.missing.join("、"), "err");
-        btn.disabled = false;
-        return;
-      }
-
-      setMsg("送出中…");
-
-      let userId = "";
-      let displayName = "";
-      try {
-        if (window.liff && liff.isInClient() && liff.isLoggedIn()) {
-          const profile = await liff.getProfile();
-          userId = profile.userId || "";
-          displayName = profile.displayName || "";
-        }
-      } catch (_) {}
-
-      const payload = {
-        demo: selectedDemo,
-        lastName: v.lastName,
-        title: v.title,
-        phone: v.phone,
-        note: document.getElementById("note").value.trim(),
-        userId,
-        displayName
+  function renderDemos(){
+    const g=document.getElementById("demoGrid");
+    g.innerHTML="";
+    DEMOS.forEach((d,i)=>{
+      const el=document.createElement("div");
+      el.className="demo";
+      el.innerHTML=`<img src="${d.img}"><div class="txt">${d.name}</div>`;
+      el.onclick=()=>{
+        selectedDemo=d.id;
+        [...g.children].forEach(x=>x.classList.remove("active"));
+        el.classList.add("active");
       };
+      g.appendChild(el);
+      if(i===0) el.click();
+    });
+  }
 
-      try {
-        // ✅ 用 text/plain 避免 CORS 預檢，Apps Script 最穩
-        const res = await fetch(API_URL, {
-          method: "POST",
-          mode: "cors",
-          headers: { "Content-Type": "text/plain;charset=utf-8" },
-          body: JSON.stringify(payload)
-        });
+  function validate(){
+    const ln=lastName.value.trim();
+    const tt=title.value.trim();
+    const ph=phone.value.trim();
 
-        const text = await res.text();
-        let json = {};
-        try { json = JSON.parse(text); } catch (_) {}
+    if(!ln) return "請填寫姓氏";
+    if(!tt) return "請選擇稱謂";
+    if(!ph) return "請填寫電話";
+    if(!/^\d{10}$/.test(ph)) return "電話格式不正確";
+    return "";
+  }
 
-        if (!res.ok || !json.success) {
-          const errMsg = (json && json.error) ? json.error : `HTTP ${res.status}`;
-          throw new Error(errMsg);
-        }
+  async function submit(){
+    const err=validate();
+    if(err){ setMsg("❌ "+err,"err"); return; }
 
-        setMsg("✅ 預約成功", "ok");
+    setMsg("送出中…");
+    submitBtn.disabled=true;
 
-        if (window.liff && liff.isInClient()) {
-          setTimeout(() => liff.closeWindow(), 900);
-        }
-      } catch (e) {
-        setMsg("❌ 預約失敗：" + (e.message || "未知錯誤"), "err");
-      } finally {
-        btn.disabled = false;
+    let userId="",displayName="";
+    try{
+      if(liff.isInClient()&&liff.isLoggedIn()){
+        const p=await liff.getProfile();
+        userId=p.userId||"";
+        displayName=p.displayName||"";
       }
-    }
+    }catch(_){}
 
+    const payload={
+      demo:selectedDemo,
+      lastName:lastName.value.trim(),
+      title:title.value.trim(),
+      phone:phone.value.trim(),
+      note:note.value.trim(),
+      userId,displayName
+    };
+
+    try{
+      await fetch(API_URL,{
+        method:"POST",
+        mode:"no-cors",
+        headers:{ "Content-Type":"text/plain;charset=utf-8" },
+        body:JSON.stringify(payload)
+      });
+
+      setMsg("✅ 預約成功","ok");
+      if(liff.isInClient()) setTimeout(()=>liff.closeWindow(),900);
+    }catch(e){
+      setMsg("❌ 預約失敗","err");
+    }finally{
+      submitBtn.disabled=false;
+    }
+  }
+
+  async function init(){
+    try{ await liff.init({ liffId:LIFF_ID }); }catch(_){}
     renderDemos();
-    initLIFF();
-    document.getElementById("submitBtn").addEventListener("click", submit);
-  </script>
+    submitBtn.onclick=submit;
+  }
+
+  init();
+</script>
 </body>
 </html>
