--- a/index.html
+++ b/index.html
@@ -6,147 +6,27 @@
   <title>LINE 預約</title>
 
   <style>
-    :root{
-      --ui:1;
-      --gap:12px;
-      --radius:16px;
-    }
-
-    html,body{
-      margin:0;
-      height:100%;
-      background:#f6f7fb;
-      font-family:system-ui,-apple-system,"Segoe UI","Noto Sans TC",Arial;
-    }
-
-    .app{
-      height:100%;
-      display:flex;
-      flex-direction:column;
-    }
-
-    .content{
-      flex:1;
-      overflow:auto;
-      padding:12px;
-      box-sizing:border-box;
-    }
-
-    .card{
-      background:#fff;
-      border-radius:16px;
-      padding:14px;
-      margin-bottom:12px;
-      box-shadow:0 6px 18px rgba(0,0,0,.05);
-    }
-
-    h1{
-      margin:0 0 6px;
-      font-size:18px;
-      font-weight:900;
-    }
-
-    .muted{
-      font-size:13px;
-      color:#667085;
-    }
-
-    .sectionTitle{
-      font-size:16px;
-      font-weight:900;
-      margin-bottom:10px;
-    }
-
-    /* Demo */
-    .demo-grid{
-      display:grid;
-      grid-template-columns:1fr 1fr;
-      gap:12px;
-    }
-
-    .demo{
-      border:2px solid #e5e7eb;
-      border-radius:16px;
-      overflow:hidden;
-      cursor:pointer;
-    }
-
-    .demo.active{
-      border-color:#06c755;
-      box-shadow:0 0 0 3px rgba(6,199,85,.25);
-    }
-
-    .demo img{
-      width:100%;
-      height:110px;
-      object-fit:cover;
-      display:block;
-    }
-
-    .demo .txt{
-      text-align:center;
-      font-weight:900;
-      padding:8px;
-    }
-
-    /* Form */
-    label{
-      display:block;
-      font-size:13px;
-      font-weight:800;
-      margin:10px 0 6px;
-    }
-
-    input,select,textarea{
-      width:100%;
-      padding:12px;
-      border-radius:14px;
-      border:1px solid #e2e6ef;
-      box-sizing:border-box;
-      font-size:14px;
-    }
-
-    .row{
-      display:grid;
-      grid-template-columns:1fr 120px;
-      gap:10px;
-    }
-
-    textarea{
-      resize:none;
-      height:90px;
-    }
-
-    /* Footer */
-    .footer{
-      position:sticky;
-      bottom:0;
-      background:#f6f7fb;
-      padding:10px 12px calc(10px + env(safe-area-inset-bottom));
-      border-top:1px solid #eef0f6;
-    }
-
-    .btn{
-      width:100%;
-      height:56px;
-      border:none;
-      border-radius:16px;
-      background:#06c755;
-      color:#fff;
-      font-size:18px;
-      font-weight:900;
-      cursor:pointer;
-    }
-
-    .msg{
-      margin-top:8px;
-      text-align:center;
-      font-size:14px;
-      color:#667085;
-    }
-
-    .msg.ok{ color:#067647; font-weight:900; }
-    .msg.err{ color:#b42318; font-weight:900; }
+    html,body{margin:0;height:100%;background:#f6f7fb;font-family:system-ui,-apple-system,"Segoe UI","Noto Sans TC",Arial}
+    .app{height:100%;display:flex;flex-direction:column}
+    .content{flex:1;overflow:auto;padding:12px;box-sizing:border-box}
+    .card{background:#fff;border-radius:16px;padding:14px;margin-bottom:12px;box-shadow:0 6px 18px rgba(0,0,0,.05)}
+    h1{margin:0 0 6px;font-size:18px;font-weight:900}
+    .muted{font-size:13px;color:#667085}
+    .sectionTitle{font-size:16px;font-weight:900;margin-bottom:10px}
+    .demo-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    .demo{border:2px solid #e5e7eb;border-radius:16px;overflow:hidden;cursor:pointer;background:#fff}
+    .demo.active{border-color:#06c755;box-shadow:0 0 0 3px rgba(6,199,85,.25)}
+    .demo img{width:100%;height:110px;object-fit:cover;display:block;background:#eee}
+    .demo .txt{text-align:center;font-weight:900;padding:8px}
+    label{display:block;font-size:13px;font-weight:800;margin:10px 0 6px}
+    input,select,textarea{width:100%;padding:12px;border-radius:14px;border:1px solid #e2e6ef;box-sizing:border-box;font-size:14px}
+    .row{display:grid;grid-template-columns:1fr 120px;gap:10px}
+    textarea{resize:none;height:90px}
+    .footer{position:sticky;bottom:0;background:#f6f7fb;padding:10px 12px calc(10px + env(safe-area-inset-bottom));border-top:1px solid #eef0f6}
+    .btn{width:100%;height:56px;border:none;border-radius:16px;background:#06c755;color:#fff;font-size:18px;font-weight:900;cursor:pointer}
+    .msg{margin-top:8px;text-align:center;font-size:14px;color:#667085}
+    .msg.ok{color:#067647;font-weight:900}
+    .msg.err{color:#b42318;font-weight:900}
   </style>
 </head>
 
@@ -154,14 +34,13 @@
 <div class="app">
 
   <div class="content">
-
     <div class="card">
       <h1>LINE 預約</h1>
       <div class="muted">於 LINE 內完成，不會跳出瀏覽器</div>
     </div>
 
     <div class="card">
-      <div class="sectionTitle">① 選擇模板</div>
+      <div class="sectionTitle">① 選擇產品</div>
       <div class="demo-grid" id="demoGrid"></div>
     </div>
 
@@ -184,7 +63,6 @@
       <label>備註（可選）</label>
       <textarea id="note" placeholder="方便聯絡時間 / 需求說明"></textarea>
     </div>
-
   </div>
 
   <div class="footer">
@@ -194,15 +72,14 @@
 
 </div>
 
-<!-- LIFF SDK -->
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
 <script>
-  /* ========= 設定區（只動這裡） ========= */
+  /* ====== 只改這裡 ====== */
   const LIFF_ID = "2008866230-o043vGnI";
-  const API_URL = "https://script.google.com/macros/s/AKfycbXIV_n3MEPghWWP-tFUPaMGX6T6Cxa5vxz6aUSP37I_sX2uyYw0Tz2-P-ycMVD_/exec";
+  const API_URL = "https://script.google.com/macros/s/AKfycbzXIV_n3MEPgLhWWP-tFUPaMGX6T6Cxa5vxz6aUSP37I_sX2uyYywoTz2-P-ycMVVD_/exec";
+  /* ====================== */
 
-  /* ========= Demo ========= */
   const DEMOS = [
     { id:"Demo A", name:"Demo A", img:"https://picsum.photos/600/400?1" },
     { id:"Demo B", name:"Demo B", img:"https://picsum.photos/600/400?2" }
@@ -210,19 +87,21 @@
 
   let selectedDemo = "";
 
+  const $ = (id)=>document.getElementById(id);
+
   function setMsg(t,type=""){
-    const m=document.getElementById("msg");
+    const m=$("msg");
     m.className="msg "+type;
     m.textContent=t||"";
   }
 
   function renderDemos(){
-    const g=document.getElementById("demoGrid");
+    const g=$("demoGrid");
     g.innerHTML="";
     DEMOS.forEach((d,i)=>{
       const el=document.createElement("div");
       el.className="demo";
-      el.innerHTML=`<img src="${d.img}"><div class="txt">${d.name}</div>`;
+      el.innerHTML=`<img src="${d.img}" alt=""><div class="txt">${d.name}</div>`;
       el.onclick=()=>{
         selectedDemo=d.id;
         [...g.children].forEach(x=>x.classList.remove("active"));
@@ -234,9 +113,9 @@
   }
 
   function validate(){
-    const ln=lastName.value.trim();
-    const tt=title.value.trim();
-    const ph=phone.value.trim();
+    const ln=$("lastName").value.trim();
+    const tt=$("title").value.trim();
+    const ph=$("phone").value.trim();
 
     if(!ln) return "請填寫姓氏";
     if(!tt) return "請選擇稱謂";
@@ -250,11 +129,13 @@
     if(err){ setMsg("❌ "+err,"err"); return; }
 
     setMsg("送出中…");
-    submitBtn.disabled=true;
+    $("submitBtn").disabled=true;
 
-    let userId="",displayName="";
+    let userId="", displayName="";
     try{
-      if(liff.isInClient()&&liff.isLoggedIn()){
+      if(liff.isInClient()){
+        // LINE 內通常已登入，但保險起見做判斷
+        if(!liff.isLoggedIn()) liff.login();
         const p=await liff.getProfile();
         userId=p.userId||"";
         displayName=p.displayName||"";
@@ -263,34 +144,42 @@
 
     const payload={
       demo:selectedDemo,
-      lastName:lastName.value.trim(),
-      title:title.value.trim(),
-      phone:phone.value.trim(),
-      note:note.value.trim(),
-      userId,displayName
+      lastName:$("lastName").value.trim(),
+      title:$("title").value.trim(),
+      phone:$("phone").value.trim(),
+      note:$("note").value.trim(),
+      userId, displayName
     };
 
     try{
-      await fetch(API_URL,{
+      const res = await fetch(API_URL,{
         method:"POST",
-        mode:"no-cors",
-        headers:{ "Content-Type":"text/plain;charset=utf-8" },
+        headers:{ "Content-Type":"text/plain;charset=utf-8" }, // 簡單請求，減少麻煩
         body:JSON.stringify(payload)
       });
+
+      const text = await res.text();
+      let json = {};
+      try{ json = JSON.parse(text); }catch(_){}
+
+      if(!res.ok || !json.success){
+        throw new Error(json.error || ("HTTP "+res.status));
+      }
 
       setMsg("✅ 預約成功","ok");
       if(liff.isInClient()) setTimeout(()=>liff.closeWindow(),900);
     }catch(e){
       setMsg("❌ 預約失敗","err");
     }finally{
-      submitBtn.disabled=false;
+      $("submitBtn").disabled=false;
     }
   }
 
   async function init(){
-    try{ await liff.init({ liffId:LIFF_ID }); }catch(_){}
+    // 不要在非 LINE 內硬顯示「初始化失敗」
+    try{ await liff.init({ liffId: LIFF_ID }); }catch(_){}
     renderDemos();
-    submitBtn.onclick=submit;
+    $("submitBtn").addEventListener("click", submit);
   }
 
   init();
