--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ button {
 
 <script>
 /* ===== 只要改這一行 ===== */
-const API_URL = "https://script.google.com/macros/s/AKfycbzXIV_n3MEPgLhWWP-tFUPaMGX6T6Cxa5vxz6aUSP37I_sX2uyYywoTz2-P-ycMVVD_/exec";
+const API_URL = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLhFrPrM2lRuLeZMntho_zn3gquNZlVoJcwA2Us9M1MS-K-LCA0x9Wu4hohrzV2O39UTxBvT4-8VU_2rskYXxM5JHCCwWXI5ph_L5iZhj7FdtXh_cVB5PcvRrcHKvfjaNdE_oWG_6f9ZC5Ha1uvau_YfFanSxVCRw-AzR_gYEPDasTIGYHDi0cN-vYWWZ8Tur5yj3PkYz0YV6JBAppdPNNlDCriUS1fQDMOcX0fHO6BDIkpeRK3FxUEfEa2sgsykIdSS-8o_-9iBiwD6ZadyPOYn5k-YpA&lib=McGHyu1DwcIndvqiYenxwrf26MWEnK4vG";
 /* ====================== */
 
 const DEMOS = [
